change font size for small breakpoint and some small layout issue for all pages

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -11,7 +11,7 @@
 }
 
 .subSection-small {
-    height: 10px;
+    height: 10rem;
     background: url("./images/rain.jpg");
 }
 
